--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "nextjs-shadcn-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "scrape": "node scripts/run-scraper.js",
+    "scrape:validate": "node scripts/run-scraper.js validate",
+    "scrape:summary": "node scripts/run-scraper.js summary",
+    "test:data": "node scripts/test-data-pipeline.js"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -14,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "playwright": "^1.40.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
