--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "scrape": "node scripts/run-scraper.js",
     "scrape:validate": "node scripts/run-scraper.js validate",
     "scrape:summary": "node scripts/run-scraper.js summary",
-    "test:data": "node scripts/test-data-pipeline.js"
+    "test:data": "node scripts/test-data-pipeline.js",
+    "update-data": "node scripts/auto-updater.js update",
+    "check-data": "node scripts/auto-updater.js check",
+    "data-health": "node scripts/auto-updater.js health"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -19,6 +22,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "openai": "^5.8.2",
     "playwright": "^1.40.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
