--- a/package.json
+++ b/package.json
@@ -8,22 +8,26 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "scrape": "node scripts/run-scraper.js",
-    "scrape:validate": "node scripts/run-scraper.js validate",
-    "scrape:summary": "node scripts/run-scraper.js summary",
     "test:data": "node scripts/test-data-pipeline.js",
-    "update-data": "node scripts/auto-updater.js update",
-    "check-data": "node scripts/auto-updater.js check",
-    "data-health": "node scripts/auto-updater.js health"
+    "update-data": "node scripts/api-data-updater.js update",
+    "check-data": "node scripts/api-data-updater.js check",
+    "data-health": "node scripts/api-data-updater.js health",
+    "populate-vectors": "node scripts/populate-vector-db.js",
+    "update-vectors": "node scripts/daily-vector-update.js",
+    "enhanced-vectors": "tsx scripts/enhanced-vector-operations.js",
+    "realtime-vectors": "tsx scripts/realtime-vector-updater.js",
+    "test-query-router": "tsx scripts/test-query-router.js",
+    "api-health": "node scripts/api-health-check.js"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "openai": "^5.8.2",
-    "playwright": "^1.40.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
@@ -31,12 +35,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
+    "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
